--- a/Assignment2.ipynb
+++ b/Assignment2.ipynb
@@ -16,7 +16,18 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "source": [
+        "path_to_csv = '/content/gdrive/My Drive/diabetes.csv'"
+      ],
+      "metadata": {
+        "id": "_r3MUyfgE-IQ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "XdNlr5jSYWik",
         "colab": {
@@ -37,17 +48,6 @@
         "from google.colab import drive\n",
         "drive.mount('/content/gdrive')"
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "path_to_csv = '/content/gdrive/My Drive/diabetes.csv'"
-      ],
-      "metadata": {
-        "id": "_r3MUyfgE-IQ"
-      },
-      "execution_count": 4,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -88,8 +88,7 @@
         "my_nn_fitted = my_nn_model.fit(X_train, Y_train, epochs=100,\n",
         "                         initial_epoch=0)\n",
         "print(my_nn_model.summary())\n",
-        "print(my_nn_model.evaluate(X_test, Y_test))\n",
-        ""
+        "print(my_nn_model.evaluate(X_test, Y_test))\n"
       ],
       "metadata": {
         "colab": {
@@ -98,7 +97,7 @@
         "id": "iuzHorBiDciq",
         "outputId": "12c546bb-7656-42f7-d45a-5c6c48c8f256"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -360,8 +359,7 @@
         "my_nn_fitted = my_nn_model.fit(X_train, Y_train, epochs=100,\n",
         "                         initial_epoch=0)\n",
         "print(my_nn_model.summary())\n",
-        "print(my_nn_model.evaluate(X_test, Y_test))\n",
-        ""
+        "print(my_nn_model.evaluate(X_test, Y_test))\n"
       ],
       "metadata": {
         "colab": {
@@ -370,7 +368,7 @@
         "id": "mbVL9bZGfqXm",
         "outputId": "76e07610-75c7-4ca0-df07-aa2311db1e35"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -661,7 +659,7 @@
         "id": "Pejt_smJg-YE",
         "outputId": "20772bb0-8688-42fa-9278-399a080afba3"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -776,7 +774,7 @@
         "id": "AKoTRv0ZhJT-",
         "outputId": "bd8d6032-1ca8-4074-812a-6329ca52efce"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -929,7 +927,7 @@
         "id": "x6tr6aFhifpS",
         "outputId": "537e54c4-9d22-4a48-b564-d34c3607d555"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1073,8 +1071,7 @@
         "\n",
         "    # evaluate the model on test data\n",
         "    loss, accuracy = model.evaluate(x_test.reshape(-1, 784), y_test, verbose=0)\n",
-        "    print('{} - Test loss: {:.4f}, Test accuracy: {:.4f}'.format(name, loss, accuracy))\n",
-        ""
+        "    print('{} - Test loss: {:.4f}, Test accuracy: {:.4f}'.format(name, loss, accuracy))\n"
       ],
       "metadata": {
         "colab": {
@@ -1084,7 +1081,7 @@
         "id": "KbmlImn-pGRO",
         "outputId": "969aabe2-e649-4ceb-c5eb-91e7e5e6cdef"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1227,8 +1224,7 @@
         "\n",
         "    # evaluate the model on test data\n",
         "    loss, accuracy = model.evaluate(x_test.reshape(-1, 784), y_test, verbose=0)\n",
-        "    print('{} - Test loss: {:.4f}, Test accuracy: {:.4f}'.format(name, loss, accuracy))\n",
-        ""
+        "    print('{} - Test loss: {:.4f}, Test accuracy: {:.4f}'.format(name, loss, accuracy))\n"
       ],
       "metadata": {
         "colab": {
@@ -1238,7 +1234,7 @@
         "id": "Ew8cjhJoprm-",
         "outputId": "4ebc3331-d65c-44f1-ffe8-1790d390c77f"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
